cabal-version:      2.4
name:               advent-code2015
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sstollenwerk
maintainer:         sstollenwerk@yahoo.co.nz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-code2015
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day11,Generic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      split ^>=0.2.3.5,
                      pureMD5 ^>=2.1.4,
                      memoize ^>=1.1.1,
                      containers ^>=0.6.5.1,
                      text^>=2.0.1,
    hs-source-dirs:   app
    default-language: Haskell2010
